[tool.poetry]
name = "pyszne-crowler"
version = "0.1.0"
description = "A personal experimental project"
authors = ["Mantisus <moriturus7@gmail.com>"]
readme = "README.md"
packages = [{include = "pyszne_crowler"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.23.3"
brotli = "^1.0.9"
loguru = "^0.6.0"
lxml = "^4.9.2"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ruff = "^0.0.254"
pre-commit = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 99
select = [
  "E",
  "F",
  "W",
  "Q",
  "UP",
  "I",
  "N",
]

[tool.black]
line-length = 99
